--- a/force-app/main/default/classes/BoatSearchResults.cls
+++ b/force-app/main/default/classes/BoatSearchResults.cls
@@ -10,6 +10,10 @@ public with sharing class BoatSearchResults {
         // return [SELECT Id, Name, Contact__c, Picture__c, Price__c, Year_Built__c FROM Boat__c ];
     }
 
+    /** 
+     * @name getBoatTypes
+     * @description return the list "Boat Type" which is renred as the picklist values on "Friends with Boat" lightning app
+    **/
     @AuraEnabled
     public static BoatType__c[] getBoatTypes(){
         System.debug('List: ' + [SELECT Id, Name FROM BoatType__c]);
