--- a/force-app/main/default/classes/Product2Helper.cls
+++ b/force-app/main/default/classes/Product2Helper.cls
@@ -19,21 +19,14 @@ public class Product2Helper {
      * @param List<Product2> oldList
     **/
     public static void AfterUpdate(List<Product2> newList, List<Product2> oldList){
-        //ToDo: Declare a List of Product2 records named needsAnnouncement
         List<Product2> needsAnnouncement = new List<Product2>();
 
-        //ToDo: Declare a Map of Strings to Inventory_Setting__mdt records
         Map<String, Inventory_Setting__mdt> inventoryMdtSettingMap = new Map<String, Inventory_Setting__mdt>();
 
-        //ToDo: Loop through a query of Inventory_Setting__mdt records and populate the Map with Name as the key
         for (Inventory_Setting__mdt ism: [SELECT Id, Label, Developername, Low_Quantity_Alert__c FROM Inventory_Setting__mdt]) {
             inventoryMdtSettingMap.put(ism.Label, ism);
         }
 
-        //ToDo: Loop through the Products in newList
-        // Use the corresponding Inventory Setting record to determine the correct Low Quantity Alert
-        // If the Product's Quantity Remaining has been changed to less than the Low Quantity Alert
-        //      add it to the needsAnnouncement list
         for (Integer i = 0; i < newList.size(); i++) {
             if(newList[i].Quantity_Remaining__c != oldList[i].Quantity_Remaining__c 
             && newList[i].Quantity_Remaining__c < inventoryMdtSettingMap.get(newList[i].Family).Low_Quantity_Alert__c) {
@@ -41,7 +34,7 @@ public class Product2Helper {
             }
         }
 
-        //ToDo: Pass records to the postAlerts method
+        // Pass records to the postAlerts method
         PostAlerts(needsAnnouncement);
     }
 
@@ -53,7 +46,7 @@ public class Product2Helper {
     public static void PostAlerts(List<Product2> productList){
         List<ConnectApi.AnnouncementInput> toPost = new List<ConnectApi.AnnouncementInput>();
         for ( Product2 p : productList ){
-            // ToDo: Construct a new AnnouncementInput for the Chatter Group so that it:
+            // Construct a new AnnouncementInput for the Chatter Group so that it:
             // expires in a day
             // does not notify users via email.
             // and has a text body that includes the name of the product followed by the INVENTORY_LEVEL_LOW constant
@@ -70,7 +63,7 @@ public class Product2Helper {
             announcementInput.sendEmails = false;
             toPost.add(announcementInput);
         }
-        // ToDo: Create and enqueue an instance of the announcementQueuable class with the list of Products
+        // Create and enqueue an instance of the announcementQueuable class with the list of Products
         AnnouncementQueueable q = new AnnouncementQueueable();
         q.toPost = toPost;
         System.enqueueJob(q);
